# rs-open-gopro

./: Cargo.toml  PROGRESS.md  README.md
.github/workflows/: build.yaml  publish.yaml
examples/: Cargo.toml  shutter_via_usb.rs  wifi_credentials_via_ble.rs
open-gopro/: Cargo.toml
open-gopro/src/: ble.rs  http.rs  lib.rs
