[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
open-gopro = { version = "0.1", path = "../open-gopro" }
tokio = { version = "1", features = ["full"] }
btleplug = "0.10"

[[example]]
name = "wifi_credentials_via_ble"
path = "wifi_credentials_via_ble.rs"
