[package]
name = "open-gopro"
description = "A crate to control GoPro cameras via BLE, WiFi or USB."
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = "0.1"
btleplug = "0.10"
uuid = "1"
lazy_static = "1"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
